BUG:147814 Fix padding on right side in KHelpCenter to improve readability
svn path=/branches/KDE/3.5/kdelibs/; revision=694030

--- a/doc/common/kde-default.css
+++ b/doc/common/kde-default.css
@@ -33,7 +33,7 @@ body {
   background: white none;
   color: black;
   font-family: sans-serif;
-  padding: 0;
+  padding: 0 15px 0 0;
   margin: 0; 
 }
 
